# seo_ultimate

./: .coveragerc  .editorconfig  .env  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG_2025-12-31.md  CLAUDE.md  CLUSTERING_REPORT.md  CLUSTERS_MAP.md  DB_GUIDE.md  GEMINI.md  MASTER_CHECKLIST.md  OPTIMIZATION_PLAN.md  README.md  SEO_AUDIT_JANUARY2026.md  SKILLS_OPTIMIZATION_PLAN.md  SYNONYM_CLEANUP_PROMPT.md  TASKS.md  UK_UNCATEGORIZED_KEYWORDS.md  ZERO_FREQUENCY_CLEANUP_REPORT.md  analyze_categories.py  audit_project_full.py  check_csv_temp.py  check_missing_content.py  cleanup_zero_freq.py  content-reviewer.skill  content_updates.sql  docker-compose.yml  env_test.py  key_all.csv  keywords_from_excel.md  lint_report.txt  mypy_errors.txt  mypy_errors_2.txt  product_assortment.md  pyproject.toml  pytest.ini  requirements-dev.txt  (+10 more)
.claude/: README.md  settings.local.json
.github_repos/: README.md
archive/: AUDIT_AND_OPTIMIZATION_PLAN.md  AUDIT_REPORT.md  AUDIT_REPORT_root.md  CONTENT_GUIDE_FULL_2025-12-16_v4.4.md  FINAL_VISION.md  INDEX.md  OPTIMIZATION_AND_BUGFIX_PLAN.md  ORCHESTRATOR_PROMPT.md  README.md  SEO_MASTER_LEGACY_2025-12-16.md  SEO_MASTER_v2.0_2025-12-17.md  TASKS_LEGACY.md  TZ_FINAL.md  TZ_GPT_VISION.md  VISION.md  requirements_minimal.txt  seo_research_december_2025_full.md  verify_refactoring.py
categories/: README.md
data/: README.md  STRUCTURE.md  all_keywords.json  all_meta.json  catalog_structure.json  category_ids.json  category_utp.json  google_feed.xml  list_mode_export.csv  products.json  products_by_category.json  ru_semantics_master.csv
deploy/: README.md  aktivnaya-pena.sql  antibitum_ru.sql  antibitum_uk.sql  antibitum_update.sql  antimoshka_ru.sql  antimoshka_uk.sql  antimoshka_update.sql  cherniteli-shin.sql  cherniteli-shin_update.sql  dlya-ruchnoy-moyki.sql  fix-419-encoding.sql  fix-419-paragraphs.sql  fix-all-dosages.sql  fix-dosage.sql  fix-mobile-tables.sql  fix-paragraphs.sql  fix-styles-spacing.sql  glina-i-avtoskraby.sql  glina-i-avtoskraby_update.sql  ochistiteli-diskov.sql  ochistiteli-diskov_update.sql  ochistiteli-shin.sql  ochistiteli-shin_update.sql  ochistiteli-stekol-table-ru.sql  ochistiteli-stekol-table-uk.sql  ochistiteli-stekol.sql  ochistiteli-stekol_update.sql
docs/: CANNIBALIZATION_REPORT.md  CONTENT_GUIDE.md  DB_GUIDE.md  PARALLEL_WORKERS.md  README.md  RESEARCH_GUIDE.md  WORKFLOW_SEMANTICS.md  (+1 more)
(+1696 files in other folders)
