# Python Project Configuration
# Линтеры и форматтеры для проекта SEO-текстов

[project]
name = "seo-category-texts"
version = "1.0.0"
description = "SEO тексты для 72 категорий Ultimate.net.ua"
requires-python = ">=3.8"

# Ruff - быстрый линтер и форматтер
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "venv",
    "env",
    "__pycache__",
    "archive",
    "*.egg-info",
    ".claude",
    ".agent",
    ".github_repos",
]

# Выбор правил линтера
[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "B",      # flake8-bugbear (потенциальные баги)
    "I",      # isort (сортировка импортов)
    "UP",     # pyupgrade (современный Python)
    "SIM",    # flake8-simplify (упрощение кода)
    "C4",     # flake8-comprehensions
    "PT",     # flake8-pytest-style
    "S",      # flake8-bandit (security checks)
]

ignore = [
    "E501",   # line too long (мы используем 100, это нормально)
    "S101",   # Use of assert detected (assert - ok для тестов)
]

# Автоисправление
fixable = ["ALL"]
unfixable = []

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # неиспользуемые импорты в __init__ - ок

# Настройки форматирования
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Настройки isort (сортировка импортов)
[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

# Black - резервный форматтер (если нужен)
[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | archive
  | __pycache__
)/
'''

# MyPy - проверка типов
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Включать постепенно
exclude = [
    ".claude",
    ".agent",
    ".github_repos",
    "\\.venv",
    "venv",
    "archive",
]
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true

# Игнорировать отсутствующие импорты для сторонних библиотек
ignore_missing_imports = true

# Bandit - security checks
[tool.bandit]
exclude_dirs = [".venv", "venv", "archive", "tests"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]
